fixed position of search autocomplete on tablet

--- a/src/components/profile/Header/header.module.css
+++ b/src/components/profile/Header/header.module.css
@@ -372,11 +372,11 @@ h5 {
 @media (max-width: 768px) {
   .searchResultsContainer {
     box-sizing: border-box;
-    position: fixed;
+    position: absolute;
     padding: 5px 20px;
-    left: 0;
-    top: 64px;
-    width: 100%;
+    left: -115px;
+    top: 40px;
+    width: calc(100vw - 10px);
   }
 }
 
